test/libsolidity/syntaxTests/indexing/array_noninteger_index.sol
contract C {
  function f() public {
    bytes[32] memory a;
    a[888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888];
  }
}
// ----
// TypeError 3383: (65-179): Out of bounds array access.
